# SlimeGba

./: .gitignore  CMakeLists.txt  README.MD
src/: slime.c
src/arm/: arm.c  arm.h  arm_inst_decode.h  disassembler.c  disassembler.h  inst_decode.h  thumb.c  thumb_inst_decode.h
src/bus/: sys_bus.c  sys_bus.h
src/gba/: gba.c  gba.h
src/memory/: memory.c  memory.h
src/utils/: file_open.c  file_open.h
